change form name

--- a/static/form.html
+++ b/static/form.html
@@ -1,5 +1,5 @@
 <form name="bvh-contact-form" netlify netlify-honeypot="bot-field" hidden>
-    <input type="hidden" name="bvh-form" value="bvh-contact-form" />
+    <input type="hidden" name="contact-form" value="bvh-contact-form" />
     <input type="text" name="fullName" />
     <input type="text" name="email" />
     <textarea name="message"></textarea>
